feat: add Ollama integration for AI summary